projects/batfish/src/test/resources/org/batfish/representation/aws/test-internet-connectivity/aws_configs/InternetGateways.json
{
  "InternetGateways": [
    {
      "Attachments": [
        {
          "State": "available",
          "VpcId": "vpc-b390fad5"
        }
      ],
      "InternetGatewayId": "igw-fac5839d",
      "Tags": []
    }
  ]
}
