projects/batfish/src/test/resources/org/batfish/representation/aws/test-internet-connectivity/aws_configs/Subnets.json
{
  "Subnets": [
    {
      "AssignIpv6AddressOnCreation": false,
      "AvailabilityZone": "us-west-2a",
      "AvailableIpAddressCount": 9,
      "CidrBlock": "192.168.2.16/28",
      "DefaultForAz": false,
      "Ipv6CidrBlockAssociationSet": [],
      "MapPublicIpOnLaunch": false,
      "State": "available",
      "SubnetId": "subnet-073b8061",
      "VpcId": "vpc-b390fad5"
    }
  ]
}
