projects/batfish/src/test/resources/org/batfish/representation/aws/test-internet-connectivity/aws_configs/Vpcs.json
{
  "Vpcs": [
    {
      "CidrBlock": "192.168.0.0/16",
      "CidrBlockAssociationSet": [
        {
          "AssociationId": "vpc-cidr-assoc-c32b03ab",
          "CidrBlock": "192.168.0.0/16",
          "CidrBlockState": {
            "State": "associated"
          }
        }
      ],
      "DhcpOptionsId": "dopt-5870b93d",
      "InstanceTenancy": "default",
      "IsDefault": false,
      "State": "available",
      "Tags": [
        {
          "Key": "Name",
          "Value": "Demo"
        }
      ],
      "VpcId": "vpc-b390fad5"
    }
  ]
}
